# double_pendulum

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  run_progressive_hardening.py
configs/: default.yaml  recovery.yaml  recovery_stable.yaml  stabilize.yaml  swingup.yaml
src/app/: benchmark_main.cpp  eval_main.cpp  simulator_main.cpp  train_main.cpp  train_torch_main.cpp  viz_main.cpp
src/core/: Config.cpp  Config.hpp  Recorder.cpp  Recorder.hpp  SharedState.hpp  SimWorld.cpp  SimWorld.hpp  Trainer.cpp  Trainer.hpp
src/physics/: DoublePendulum.cpp  DoublePendulum.hpp
src/rl/: DoublePendulumEnv.cpp  DoublePendulumEnv.hpp  NeuralNet.cpp  NeuralNet.hpp  PPOAgent.cpp  PPOAgent.hpp  RolloutBuffer.hpp
src/util/: Logger.hpp  Math.hpp  Profiler.hpp  Random.hpp  ThreadPool.hpp
tests/: test_main.cpp
